src/test/ui/unboxed-closures/non-tupled-arg-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/non-tupled-arg-mismatch.rs:6:7
   |
LL |     a(|_: usize| {});
   |     - ^^^^^^^^^^^^^ types differ
   |     |
   |     required by a bound introduced by this call
   |
   = note: expected trait `Fn<usize>`
              found trait `Fn<(usize,)>`
note: required by a bound in `a`
  --> $DIR/non-tupled-arg-mismatch.rs:3:9
   |
LL | fn a<F: Fn<usize>>(f: F) {}
   |         ^^^^^^^^^ required by this bound in `a`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
